tests/baselines/reference/arrayLiteralTypeInference.errors.txt
arrayLiteralTypeInference.ts(14,14): error TS2353: Object literal may only specify known properties, and 'trueness' does not exist in type 'Action'.
arrayLiteralTypeInference.ts(15,14): error TS2353: Object literal may only specify known properties, and 'name' does not exist in type 'Action'.
arrayLiteralTypeInference.ts(31,18): error TS2353: Object literal may only specify known properties, and 'trueness' does not exist in type '{ id: number; }'.
arrayLiteralTypeInference.ts(32,18): error TS2353: Object literal may only specify known properties, and 'name' does not exist in type '{ id: number; }'.


==== arrayLiteralTypeInference.ts (4 errors) ====
    class Action {
        id: number;
    }
    
    class ActionA extends Action {
        value: string;
    }
    
    class ActionB extends Action {
        trueNess: boolean;
    }
    
    var x1: Action[] = [
        { id: 2, trueness: false },
                 ~~~~~~~~
!!! error TS2353: Object literal may only specify known properties, and 'trueness' does not exist in type 'Action'.
        { id: 3, name: "three" }
                 ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'name' does not exist in type 'Action'.
    ]
    
    var x2: Action[] = [
        new ActionA(),
        new ActionB()
    ]
    
    var x3: Action[] = [
        new Action(),
        new ActionA(),
        new ActionB()
    ]
    
    var z1: { id: number }[] =
        [
            { id: 2, trueness: false },
                     ~~~~~~~~
!!! error TS2353: Object literal may only specify known properties, and 'trueness' does not exist in type '{ id: number; }'.
            { id: 3, name: "three" }
                     ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'name' does not exist in type '{ id: number; }'.
        ]
    
    var z2: { id: number }[] =
        [
            new ActionA(),
            new ActionB()
        ]
    
    var z3: { id: number }[] =
        [
            new Action(),
            new ActionA(),
            new ActionB()
        ]
    
    
    
    
    